# STUnD

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Main.hs  README.md  STUnD.cabal  _config.yaml  compose.yml  deployment.md  installation.md  pub.md  stack.yaml  stund.bib  stund.desktop  stund.ps1  tutorial.md
docs/: _config.yaml  index.md  installation.md  pub.md  tutorial.md  win.md
docs/_includes/: footer.html
static/: stund.css  stund.html  stund.js  ud-iso-languages.js
