name: STUnD
version: 0
synopsis: A GUI Search Tool for (bilingual) parallel UD treebanks 
description:  A prototype GUI Search Tool for (bilingual) parallel Universal Dependencies treebanks that runs in your browser
license: MIT
license-file: LICENSE
author: Arianna Masciolini
maintainer: arianna.masciolini@gu.se
category: Language
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.10 

executable stund-gui
    main-is: Main.hs
    build-depends:
        base,
        MissingH,
        text,
        pretty,
        containers,
        temporary,
        directory,
        scotty >= 0.22,
        wai-extra,
        wai-middleware-static,
        http-types,
        aeson,
        deptreehs,
        l2-ud
    default-language: Haskell2010
